# cpp-cicd-pipeline

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  conanfile.txt
include/: calculator.h
src/: calculator.cpp  main.cpp
tests/: calculator_test.cpp
